--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Sobre o Projeto: RPG Codex",
+    "name": "RPG Codex",
     "slug": "banco",
     "version": "1.0.0",
     "orientation": "portrait",
