--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "expo-av": "^15.1.7",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
-    "lottie-react-native": "7.2.2",
-    "react": "19.0.0",
-    "react-native": "0.79.3",
+    "lottie-react-native": "5.1.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.72.17",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "5.4.0",
