--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0"
