--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/slider": "^4.5.7",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
     "expo": "~53.0.11",
-    "expo-av": "^15.1.7",
+    "expo-av": "~15.1.7",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-animatable": "^1.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
