--- a/package.json
+++ b/package.json
@@ -36,7 +36,16 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "jest": "^30.0.4"
   },
+  "scripts": {
+  "start": "expo start",
+  "android": "expo start --android",
+  "ios": "expo start --ios",
+  "web": "expo start --web",
+  "test": "jest",
+  "test:coverage": "jest --coverage"
+},
   "private": true
 }
