--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "banco",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
+  
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
@@ -36,16 +31,8 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "jest": "^30.0.4"
-  },
-  "scripts": {
-  "start": "expo start",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web",
-  "test": "jest",
-  "test:coverage": "jest --coverage"
-},
-  "private": true
+    "@babel/core": "^7.20.0"
+    
+  }
+
 }
